--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>FakeStore</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,14 +18,13 @@
 
 <body>
   <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
+  <main class="container main">
+    <div class="row search-field py-5">
+      <div class="col-lg-4 mx-auto">
+        <div class="input-group mb-3">
+          <input type="text" id="input-field" class="form-control" placeholder="Search Product" aria-label="Search Product" aria-describedby="search-btn">
+          <button class="btn btn-dark" type="button" onclick="loadProducts()" id="search-btn">Search</button>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -86,6 +84,9 @@
     </div>
   </main>
   <footer></footer>
+
+  <!-- bootstrap js connect -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
