--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="./css/custom-style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -37,16 +37,10 @@
         </div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart shadow py-3" id="my-cart">
+        <div class="cart bg-white shadow-sm border py-3" id="my-cart">
           <table class="table">
             <thead>
-              <h1 class="text-center">My-Cart</h1>
-              <tr>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-              </tr>
+              <h1 class="text-center pb-2 border-bottom">My-Cart</h1>
             </thead>
             <tbody>
               <tr>
@@ -81,7 +75,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-dark text-center">Buy Now</button>
           </div>
         </div>
       </div>
