--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
+      <div class="col-md-9 col-lg-9 col-sm-7 pb-3">
         <div id="all-products" class="row row-cols-1 row-cols-md-3 g-4">
         </div>
       </div>
